# OpenDataLoggerThermometer

./: .gitignore  README.md
hardware/: DataLoggingThermometer.PrjPcb  DataLoggingThermometer.PrjPcbStructure  LMT01 Interface.schdoc  Mainboard.PcbDoc  Mainboard.PcbDoc.htm  Mainboard.SchDoc  outjob.OutJob
hardware/Libraries/: LMT01 Interface.schdoc  LMT01LPG.IntLib
hardware/Libraries/74CBTLV3257PW_118/: 74CBTLV3257PW,118.SchLib  IC_74HC138PW-Q100,118.PcbLib
hardware/Libraries/JS102011JCQN/: JS102011JCQN.SchLib  SW_JS102011JCQN.PcbLib
hardware/Libraries/LCD2004/: LCD2004.PcbLib  LCD2004.SchLib
hardware/Libraries/RASPBERRY_PI_PICO/: RASPBERRY_PI_PICO.PcbLib  RASPBERRY_PI_PICO.SchLib
hardware/Libraries/SD-4-B/: CUI_SD-4-B.PcbLib  SD-4-B.SchLib
software/: README.md  State Machine.drawio
software/open_dl_thermometer_rs/: Cargo.toml  README.md  launch.json  rust-toolchain.toml
software/open_dl_thermometer_rs/src/: board.rs  config.rs  constants.rs  display.rs  lmt01.rs  lmt01_pulse_count.pio  main.rs  pcb_v1_mapping.rs  pio.rs  sd_card.rs  serial.rs  state_machine.rs
